[tool.poetry]
name = "fantasy_football"
version = "0.1.0"
description = ""
authors = ["Jay Olman <olman.jay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
espn-api = "^0.32.0"
PyYAML = "^6.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
